--- a/views/course-toStudy.ejs
+++ b/views/course-toStudy.ejs
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('partials/head') %>
-<body>
-    <div class="main">
-        <div class="report-container">
-            <div class="report-header">
-                <h1 class="recent-Articles"><%= objectCourse.name %></h1>
-            </div>
-            <div class="report-body">
+<%- include('partials/head') %>
+
+    <body>
+        <div class="main">
+            <div class="report-container">
+                <div class="report-header">
+                    <h1 class="recent-Articles">
+                        <%= objectCourse.name %>
+                    </h1>
+                </div>
+                <div class="report-body">
                     <div class="report-topic-heading">
-                        <h3 class="t-op">level</h3>
-                        <h3 class="t-op">department</h3>
-                        <h3 class="t-op">Hours</h3>
+                        <h3 class="t-op">Name</h3>
+                        <h3 class="t-op">Level</h3>
+                        <h3 class="t-op">Department</h3>
                         <h3 class="t-op">Select</h3>
                     </div>
-                <br>
+                    <br>
                     <div class="item1">
-                        <h3 class="t-op-nextlvl"><%= objectCourse.level %></h3>
-                        <h3 class="t-op-nextlvl"><%= objectCourse.departmentName %></h3>
-                        <h3 class="t-op-nextlvl"><%= objectCourse.hourse %></h3>
+                        <h3 class="t-op-nextlvl">
+                            <%= objectCourse.name %>
+                        </h3>
+                        <h3 class="t-op-nextlvl">
+                            <%= objectCourse.level %>
+                        </h3>
+                        <h3 class="t-op-nextlvl">
+                            <%= objectCourse.departmentName %>
+                        </h3>
+
                         <form action="/select-course-toStudy/<%= objectCourse._id %>" method="post">
                             <input class="btn lonbtn" type="submit" value="Select">
-                        </form>    
+                        </form>
                     </div>
+                </div>
             </div>
         </div>
-    </div>
-</body>
+    </body>
+
 </html>
