--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,42 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <%- include('partials/head') %>
 
-<body>
-
-<%- include('partials/student-header') %>
-
-
-        <div class="main">
-            <div class="report-container">
-                <div class="report-header">
-                    <h1 class="recent-Articles">Basic information</h1>
-                </div>
-                <div class="report-body">
-                    <div class="report-topic-heading">
-                        <h3 class="t-op">Name</h3>
-                        <h3 class="t-op">level</h3>
-                        <h3 class="t-op">department</h3>
+    <body>
+        <%- include('partials/student-header') %>
+            <main class="profile">
+                <div class="container">
+                    <div class="section-header">
+                        <h1 class="section-title">Basic Information</h1>
                     </div>
-                    <br>
-                    <div class="items">
-                        <div class="item1">
-                            <h3 class="t-op-nextlvl"><%= objstudent.fname %> <%= objstudent.lname %></h3>
-                            <h3 class="t-op-nextlvl"><%= objstudent.level %></h3>
-                            <h3 class="t-op-nextlvl"><%= objstudent.department %></h3>    
+                    <div class="section-body">
+                        <div class="info-row">
+                            <h3 class="info-label">Name:</h3>
+                            <div class="info-value">
+                                <%= objstudent?.fname %>
+                                    <%= objstudent?.lname %>
+                            </div>
                         </div>
-
-
-
-
-
+                        <div class="info-row">
+                            <h3 class="info-label">Level:</h3>
+                            <div class="info-value">
+                                <%= objstudent?.level %>
+                            </div>
+                        </div>
+                        <div class="info-row">
+                            <h3 class="info-label">Department:</h3>
+                            <div class="info-value">
+                                <%= objstudent?.department %>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
-
-</body>
+            </main>
+    </body>
 
 </html>
