--- a/public/style.css
+++ b/public/style.css
@@ -25,6 +25,11 @@ body {
     background-color: var(--background-color4);
     max-width: 100%;
     overflow-x: hidden;
+    font-family: Arial,
+        sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #333;
 
 }
 
@@ -195,6 +200,10 @@ header {
     width: 80px;
 }
 
+.navclose .nav-option a:last-of-type {
+    display: none;
+}
+
 .nav-option {
     width: 250px;
     height: 60px;
@@ -203,12 +212,17 @@ header {
     padding: 0 30px 0 20px;
     gap: 20px;
     transition: all 0.1s ease-in-out;
+    border-left: 5px solid rgb(255, 255, 255);
 }
 
 .nav-option:hover {
-    border-left: 5px solid #a2a2a2;
-    background-color: #dadada;
+    border-left: 5px solid rgb(47 89 141);
+    background-color: rgba(47, 89, 141, 0.664);
     cursor: pointer;
+}
+
+.nav-option:hover a {
+    color: #FFF;
 }
 
 .nav-img {
@@ -306,7 +320,8 @@ header {
     padding: 20px 20px 10px 20px;
     border-bottom: 2px solid rgba(0, 20, 151, 0.59);
 }
-a{
+
+a {
     text-decoration: none;
     color: black;
 }
@@ -321,11 +336,23 @@ a{
     height: 35px;
     width: 90px;
     border-radius: 8px;
-    background-color:#1707a5;
-    color: white;
+    /* background-color: rgb(47 89 141); */
+    border: 2px solid rgb(47 89 141);
+    color: rgb(47 89 141);
     font-size: 15px;
-    border: none;
+    /* border: none; */
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.lonbtn:hover {
+
+    background-color: rgb(47 89 141);
+    /* border: 2px solid rgb(47 89 141); */
+    color: #FFF;
+
 }
 
 .report-body {
@@ -369,9 +396,130 @@ a{
     color: white;
     border-radius: 4px;
 }
-form.login{
-    width: max-content;
+
+
+
+
+
+
+/* Style the login form */
+form.login {
+    width: 500px;
 }
-input{
+
+@media screen and (max-width: 850px) {
+    form.login {
+        width: max-content;
+    }
+}
+
+input {
     border-radius: 5px;
+}
+
+input:focus {
+    border: 2px solid rgb(47 89 141);
+    outline: 2px solid rgb(47 89 141);
+}
+
+.login {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.login label {
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+.login input[type="text"],
+.login input[type="password"],
+.login select {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+.login select {
+    margin-bottom: 10px;
+}
+
+.login .lonbtn {
+    width: 100%;
+    border-radius: 5px;
+    /* border: 2px solid rgb(47 89 141); */
+    color: rgb(47 89 141);
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.login .lonbtn:hover {
+    background-color: rgb(47 89 141);
+    color: #FFF;
+}
+
+
+
+
+
+
+
+
+
+
+/* ----------------------- */
+/* Profile page styles */
+.profile {
+    width: 80%;
+    margin: 20px auto auto;
+    padding: 20px;
+    background-color: #f5f5f5;
+}
+
+/* .container {
+    max-width: 800px;
+    margin: 0 auto;
+} */
+
+.section-header {
+    margin-bottom: 20px;
+}
+
+.section-title {
+    font-weight: bold;
+    font-size: 24px;
+}
+
+.section-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.info-row {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.info-label {
+    font-weight: bold;
+    margin-right: 10px;
+    width: 100px;
+}
+
+.info-value {
+    font-weight: normal;
 }
