--- a/views/courses-degrees.ejs
+++ b/views/courses-degrees.ejs
@@ -3,6 +3,7 @@
 <%- include('partials/head') %>
 
   <body>
+    <%- include('partials/student-header') %>
     <div class="main">
       <div class="report-container">
         <div class="report-header">
