--- a/views/courses-degree.ejs
+++ b/views/courses-degree.ejs
@@ -2,11 +2,34 @@
 <html lang="en">
   <%- include('partials/head') %>
 <body>
-
-    <% allCourses.forEach(item => { %>
-    <h1><%= item.name %></h1>
-    <h1><%= item.level %></h1>
-    <a href="/set-degree-toStudents-inCourse/<%= item._id %>">show students</a>
-    <% }); %>   
+    <div class="main">
+      <div class="report-container">
+        <div class="report-header">
+          <h1 class="recent-Articles">All Course</h1>
+      </div>
+      <div class="report-body">
+        <div class="report-topic-heading">
+          <h3 class="t-op">Name</h3>
+          <h3 class="t-op">Level</h3>
+          <h3 class="t-op">Select</h3>
+        </div>
+        <% allCourses.forEach(item => { %>
+        <div class="item1">
+          <h3 class="t-op-nextlvl">
+            <%= item.name %>
+          </h3>
+          <h3 class="t-op-nextlvl">
+            <%= item.level %>
+          </h3>
+          <a href="/set-degree-toStudents-inCourse/<%= item._id %>" class="btn lonbtn">show students</a>
+        </div>
+        <% }); %>
+      </div>
+      </div>
+    </div>
+    
+    
+    
+       
 </body>
 </html>
