delete req was added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
                                 <label>your role:</label>
                                 <select name="type" id="type">
                                     <option value="student">student</option>
-                                    <option value="stuff">stuff</option>
+                                    <option value="staff">staff</option>
                                     <option value="professor">professor</option>
                                     <option value="table admin">table admin</option>
                                     <option value="controller">controller</option>
