--- a/views/manage-user.ejs
+++ b/views/manage-user.ejs
@@ -4,5 +4,6 @@
 <body>
   <a href="register">add student</a>
   <a href="update-students">update student</a>
+  <a href="delete-student">delete student</a>
 </body>
 </html>
