--- a/views/update-students-form.ejs
+++ b/views/update-students-form.ejs
@@ -10,7 +10,7 @@
                 </div>
                 <div class="report-body">
                     <center>
-                        <form action="/ubdate-students/<%= objStudent._id %>" method="post">
+                        <form action="/update-students/<%= objStudent._id %>" method="post">
                             <label for="fname">first name</label>
                             <input type="text" name="fname" value="<%= objStudent.fname %>">
                             <br><br>
