--- a/views/courses-table.ejs
+++ b/views/courses-table.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
   <%- include('partials/head') %>
 <body>
+  <%- include('partials/student-header') %>
   <% arrCourses.forEach(item => { %>
     <h1>
       <%- item.name %>
