--- a/views/course-toTeach.ejs
+++ b/views/course-toTeach.ejs
@@ -22,7 +22,7 @@
                         <form action="/choose-course-toTeach/<%= objCourse._id %>" method="post">
                             <input class="btn lonbtn" type="submit" value="Select">
                         </form>    
-                        <button data-linkid="<%= objCourse._id %>" class="btn btn-lg btn-danger delete">Drop</button>
+                        <button data-linkid="<%= objCourse._id %>" class="btn lonbtn btn-danger delete">Drop</button>
                     </div>
             </div>
         </div>
