--- a/views/course-toStudy.ejs
+++ b/views/course-toStudy.ejs
@@ -1,56 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <%- include('partials/head') %>
+    <style>
+        .btn-danger {
+            width: 150px;
+        }
+    </style>
 
     <body>
-        <div class="main">
-            <div class="report-container">
-                <div class="report-header">
-                    <h1 class="recent-Articles">
-                        <%= objectCourse.name %>
-                    </h1>
-                </div>
-                <div class="report-body">
-                    <div class="report-topic-heading">
-                        <h3 class="t-op">Name</h3>
-                        <h3 class="t-op">Level</h3>
-                        <h3 class="t-op">Department</h3>
-                        <h3 class="t-op">Select</h3>
-                    </div>
-                    <br>
-                    <div class="item1">
-                        <h3 class="t-op-nextlvl">
+        <center>
+            <div class="main">
+                <div class="report-container">
+                    <div class="report-header">
+                        <h1 class="recent-Articles">
                             <%= objectCourse.name %>
-                        </h3>
-                        <h3 class="t-op-nextlvl">
-                            <%= objectCourse.level %>
-                        </h3>
-                        <h3 class="t-op-nextlvl">
-                            <%= objectCourse.departmentName %>
-                        </h3>
+                        </h1>
+                    </div>
+                    <div class="report-body">
+                        <div class="report-topic-heading">
+                            <h3 class="t-op">Name</h3>
+                            <h3 class="t-op">Level</h3>
+                            <h3 class="t-op">Department</h3>
+                            <h3 class="t-op">Select</h3>
+                        </div>
+                        <br>
+                        <div class="item1">
+                            <h3 class="t-op-nextlvl">
+                                <%= objectCourse.name %>
+                            </h3>
+                            <h3 class="t-op-nextlvl">
+                                <%= objectCourse.level %>
+                            </h3>
+                            <h3 class="t-op-nextlvl">
+                                <%= objectCourse.departmentName %>
+                            </h3>
 
-                        <form action="/select-course-toStudy/<%= objectCourse._id %>" method="post">
-                            <input class="btn lonbtn" type="submit" value="Select">
-                        </form>
-                        <button data-linkid="<%= objectCourse._id %>" class="btn btn-lg btn-danger delete">Drop</button>
+                            <form action="/select-course-toStudy/<%= objectCourse._id %>" method="post">
+                                <input class="btn lonbtn" type="submit" value="Select">
+                            </form>
+                            <button data-linkid="<%= objectCourse._id %>"
+                                class="btn btn-lg  btn-danger lonbtn delete">Drop</button>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </center>
         <script>
-          const btnelement = document.querySelector(".delete")
-          const courseId = btnelement.getAttribute("data-linkid");
-          btnelement.addEventListener("click", (del) => {
-              //data is variable we can store the data from eldata elly inside el json fy el app.js
-              fetch(`/studentCourse/${courseId}`, { method: "DELETE" })
-                  .then((response) => response.json())
-                  .then((data) => window.location.href = data.myLink)
-                  .catch((err) => {
-                      console.log(err);
-                  });
-  
-          })
-      </script>
+            const btnelement = document.querySelector(".delete")
+            const courseId = btnelement.getAttribute("data-linkid");
+            btnelement.addEventListener("click", (del) => {
+                //data is variable we can store the data from eldata elly inside el json fy el app.js
+                fetch(`/studentCourse/${courseId}`, { method: "DELETE" })
+                    .then((response) => response.json())
+                    .then((data) => window.location.href = data.myLink)
+                    .catch((err) => {
+                        console.log(err);
+                    });
+
+            })
+        </script>
     </body>
 
 </html>
