--- a/views/courses-table.ejs
+++ b/views/courses-table.ejs
@@ -1,18 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include('partials/head') %>
-<body>
-  <%- include('partials/student-header') %>
-  <% arrCourses.forEach(item => { %>
-    <h1>
-      <%- item.name %>
-    </h1>
-    <h2>
-      <% item.hourse %>
-    </h2>
-    <h3>
-      <% item.dayName %>
-    </h3>
-  <%  }); %>  
-</body>
+<%- include('partials/head') %>
+
+  <body>
+    <%- include('partials/student-header') %>
+
+      <div class="main">
+        <div class="report-container">
+          <div class="report-header">
+            <h1 class="recent-Articles">Courses Table</h1>
+          </div>
+          <div class="report-body">
+            <div class="report-topic-heading">
+              <h3 class="t-op">Name</h3>
+              <h3 class="t-op">Hours</h3>
+              <h3 class="t-op">Day</h3>
+            </div>
+            <% arrCourses.forEach(item=> { %>
+              <div class="item1">
+                <h3 class="t-op-nextlvl">
+                  <%= item.name %>
+                </h3>
+                <h3 class="t-op-nextlvl">
+                  <%= item.hourse %>
+                </h3>
+                <h3 class="t-op-nextlvl">
+                  <%= item.dayName %>
+                </h3>
+              </div>
+              <% }); %>
+          </div>
+        </div>
+      </div>
+
+
+
+
+  </body>
+
 </html>
