--- a/views/update-students.ejs
+++ b/views/update-students.ejs
@@ -1,35 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include('partials/head') %>
-<body>
+<%- include('partials/head') %>
+<style>
+  .lonbtn {
+    width: 150px;
+  }
+</style>
+  <body>
     <div class="main">
       <div class="report-container">
         <div class="report-header">
           <h1 class="recent-Articles">All students</h1>
-      </div>
-      <div class="report-body">
-        <div class="report-topic-heading">
-          <h3 class="t-op">Name</h3>
-          <h3 class="t-op">Level</h3>
-          <h3 class="t-op">Select</h3>
         </div>
-        <% arrStudent.forEach(item => { %>
-        <div class="item1">
-          <h3 class="t-op-nextlvl">
-            <%= item.fname %> <%= item.lname %>
-          </h3>
-          <h3 class="t-op-nextlvl">
-            <%= item.level %>
-          </h3>
-          <a href="/update-students/<%= item._id %>" class="btn lonbtn">update student</a>
+        <div class="report-body">
+          <div class="report-topic-heading">
+            <h3 class="t-op">Name</h3>
+            <h3 class="t-op">Level</h3>
+            <h3 class="t-op">Select</h3>
+          </div>
+          <% arrStudent.forEach(item=> { %>
+            <div class="item1">
+              <h3 class="t-op-nextlvl">
+                <%= item.fname %>
+                  <%= item.lname %>
+              </h3>
+              <h3 class="t-op-nextlvl">
+                <%= item.level %>
+              </h3>
+              <a href="/update-students/<%= item._id %>" class="btn lonbtn">update student</a>
+            </div>
+            <% }); %>
         </div>
-        <% }); %>
-      </div>
       </div>
     </div>
-    
-    
-    
-       
-</body>
+
+
+
+
+  </body>
+
 </html>
