--- a/views/courses-table.ejs
+++ b/views/courses-table.ejs
@@ -22,7 +22,7 @@
                   <%= item.name %>
                 </h3>
                 <h3 class="t-op-nextlvl">
-                  <%= item.hourse %>
+                  <%= item.schedule.hours %> : <%= item.schedule.minutes %>
                 </h3>
                 <h3 class="t-op-nextlvl">
                   <%= item.dayName %>
