--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -25,7 +25,7 @@
                         </div>
                         <div class="info-row">
                             <h3 class="info-label">Department:</h3>
-                            <div class="info-value">
+                            <div class="info-value" style="padding-left: 20px;">
                                 <%= objstudent?.department %>
                             </div>
                         </div>
