--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
             <div class="main">
                 <div class="report-container">
                     <div class="report-header">
-                        <h1 class="recent-Articles">Log in</h1>
+                        <h1 class="recent-Articles">Thebes Academy</h1>
                     </div>
                     <div class="report-body">
                         <center>
