--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -29,6 +29,12 @@
                                 <%= objstudent?.department %>
                             </div>
                         </div>
+                        <div class="info-row">
+                          <h3 class="info-label">Code:</h3>
+                          <div class="info-value" style="padding-left: 20px;">
+                              <%= objstudent?.code %>
+                          </div>
+                        </div>
                     </div>
                 </div>
             </main>
