--- a/views/register.ejs
+++ b/views/register.ejs
@@ -52,6 +52,9 @@
                         <label for="phone">phone</label>
                         <input type="text" name="phone">
                         <br><br>
+                        <label for="code">code</label>
+                        <input type="text" name="code">
+                        <br><br>
                         <label for="password">password</label>
                         <input type="password" name="password">
                         <br>
