--- a/views/update-students-form.ejs
+++ b/views/update-students-form.ejs
@@ -49,6 +49,9 @@
                                 <label for="phone">phone</label>
                                 <input type="text" name="phone" value="<%= objStudent.phone %>">
                                 <br><br>
+                                <label for="code">code</label>
+                                <input type="text" name="code" value="<%= objStudent.code %>">
+                                <br><br>
                                 <label for="password">password</label>
                                 <input type="password" name="password" value="<%= objStudent.password %>">
                                 <br>
