--- a/views/register.ejs
+++ b/views/register.ejs
@@ -49,6 +49,9 @@
                         <label for="level">level</label>
                         <input type="number" name="level">
                         <br><br>
+                        <label for="department">department</label>
+                        <input type="text" name="department">
+                        <br><br>
                         <label for="phone">phone</label>
                         <input type="text" name="phone">
                         <br><br>
