--- a/views/update-students-form.ejs
+++ b/views/update-students-form.ejs
@@ -46,6 +46,9 @@
                                 <label for="level">level</label>
                                 <input type="number" name="level" value="<%= objStudent.level %>">
                                 <br><br>
+                                <label for="department">department</label>
+                                <input type="text" name="department" value="<%= objStudent.department %>">
+                                <br><br>
                                 <label for="phone">phone</label>
                                 <input type="text" name="phone" value="<%= objStudent.phone %>">
                                 <br><br>
