--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <%- include('partials/head') %>
-
-    <body>
+    
+    <body style="background-image: url(img/bg.webp); background-position: center; background-repeat: no-repeat; background-size: cover;  position: relative;">
         <center>
             <div class="main">
-                <div class="report-container">
+                <div class="report-container" style="  background-color: #ffffffa6;">
                     <div class="report-header">
                         <h1 class="recent-Articles">Thebes Academy</h1>
                     </div>
