--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <%- include('partials/head') %>
     
-    <body style="background-image: url(img/bg.webp); background-position: center; background-repeat: no-repeat; background-size: cover;  position: relative;">
+    <body style="height: 100vh;background-image: url(img/bg.webp); background-position: center; background-repeat: no-repeat; background-size: cover;  position: relative;">
         <center>
             <div class="main">
                 <div class="report-container" style="  background-color: #ffffffa6;">
