--- a/views/partials/student-header.ejs
+++ b/views/partials/student-header.ejs
@@ -8,6 +8,8 @@
     </div>
 
     <div class="message">
+        <img src="https://img.freepik.com/free-icon/user_318-159711.jpg" class="icn menuicn" id="menuicn"
+            alt="menu-icon">
         <%= objstudent?.username %>
     </div>
 
