--- a/public/style.css
+++ b/public/style.css
@@ -25,12 +25,10 @@ body {
     background-color: var(--background-color4);
     max-width: 100%;
     overflow-x: hidden;
-    font-family: Arial,
-        sans-serif;
+    font-family: Arial, sans-serif;
     font-size: 16px;
     line-height: 1.5;
     color: #333;
-
 }
 
 header {
@@ -99,7 +97,7 @@ header {
 }
 
 .message {
-    gap: 40px;
+    gap: 10px;
     position: relative;
     cursor: pointer;
 }
@@ -147,8 +145,7 @@ header {
 }
 
 .main::-webkit-scrollbar-thumb {
-    background-image:
-        linear-gradient(to bottom, rgb(0, 0, 85), rgb(0, 0, 50));
+    background-image: linear-gradient(to bottom, rgb(0, 0, 85), rgb(0, 0, 50));
 }
 
 .main::-webkit-scrollbar {
@@ -168,19 +165,19 @@ header {
 }
 
 .nav {
-    min-height: 91vh;
+    height: calc(100vh - 70px);
     width: 250px;
     background-color: var(--background-color2);
     position: absolute;
     top: 0px;
-    left: 00;
+    left: 0px;
     box-shadow: 1px 1px 10px rgba(198, 189, 248, 0.825);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     overflow: hidden;
     padding: 30px 0 20px 10px;
-
+    position: "relative";
 }
 
 .navcontainer {
@@ -214,6 +211,10 @@ header {
     transition: all 0.1s ease-in-out;
     border-left: 5px solid rgb(255, 255, 255);
 }
+.nav-option:last-of-type {
+    bottom: 10px;
+    position: absolute;
+}
 
 .nav-option:hover {
     border-left: 5px solid rgb(47 89 141);
@@ -222,7 +223,7 @@ header {
 }
 
 .nav-option:hover a {
-    color: #FFF;
+    color: #fff;
 }
 
 .nav-img {
@@ -348,11 +349,9 @@ a {
 }
 
 .lonbtn:hover {
-
     background-color: rgb(47 89 141);
     /* border: 2px solid rgb(47 89 141); */
-    color: #FFF;
-
+    color: #fff;
 }
 .btn-danger {
     border: 2px solid #e73d3d !important;
@@ -405,11 +404,6 @@ a {
     color: white;
     border-radius: 4px;
 }
-
-
-
-
-
 
 /* Style the login form */
 form.login {
@@ -470,17 +464,8 @@ input:focus {
 
 .login .lonbtn:hover {
     background-color: rgb(47 89 141);
-    color: #FFF;
+    color: #fff;
 }
-
-
-
-
-
-
-
-
-
 
 /* ----------------------- */
 /* Profile page styles */
