--- a/views/delete-course.ejs
+++ b/views/delete-course.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <%- include('partials/head') %>
 <style>
-  .lonbtn {
+  .btn-danger {
     width: 150px;
   }
 </style>
@@ -18,16 +18,15 @@
             <h3 class="t-op">Level</h3>
             <h3 class="t-op">Select</h3>
           </div>
-          <% arrStudent.forEach(item=> { %>
+          <% arrCourse.forEach(item=> { %>
             <div class="item1">
               <h3 class="t-op-nextlvl">
-                <%= item.fname %>
-                  <%= item.lname %>
+                <%= item.name %>
               </h3>
               <h3 class="t-op-nextlvl">
                 <%= item.level %>
               </h3>
-              <a href="/update-courses/<%= item._id %>" class="btn lonbtn">update student</a>
+              <a href="/delete-course/<%= item._id %>" class="btn btn-danger lonbtn">delete course</a>
             </div>
             <% }); %>
         </div>
