--- a/views/update-students.ejs
+++ b/views/update-students.ejs
@@ -27,7 +27,7 @@
               <h3 class="t-op-nextlvl">
                 <%= item.level %>
               </h3>
-              <a href="/update-courses/<%= item._id %>" class="btn lonbtn">update student</a>
+              <a href="/update-students/<%= item._id %>" class="btn lonbtn">update student</a>
             </div>
             <% }); %>
         </div>
