--- a/views/course-toTeach.ejs
+++ b/views/course-toTeach.ejs
@@ -18,7 +18,7 @@
                     <div class="item1">
                         <h3 class="t-op-nextlvl"><%= objCourse.level %></h3>
                         <h3 class="t-op-nextlvl"><%= objCourse.departmentName %></h3>
-                        <h3 class="t-op-nextlvl"><%= objCourse.hourse %></h3>
+                        <h3 class="t-op-nextlvl"><%= objCourse.hoursOfCourse %></h3>
                         <form action="/choose-course-toTeach/<%= objCourse._id %>" method="post">
                             <input class="btn lonbtn" type="submit" value="Select">
                         </form>    
